name:                free-game
version:             1.2
synopsis:            Create games for free
description:
    free-game defines a monad that integrates features to create 2D games.
    .
    Twitter: #hs_free_game

homepage:            https://github.com/fumieval/free-game
bug-reports:         https://github.com/fumieval/free-game/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2012-2014 Fumiaki Kinoshita
category:            Graphics, Monads
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

extra-source-files:
  CHANGELOG.md
  examples/*.hs
  examples/*.png
  examples/*.ttf

source-repository head
  type: git
  location: https://github.com/fumieval/free-game.git

library
  default-language:   Haskell2010

  exposed-modules:
    FreeGame

  ghc-options: -Wall -fexcess-precision -O2 -threaded
  build-depends:
    free >= 4.6.1 && <5,
    call < 0.1