name:                free-game
version:             1.1.9
synopsis:            Create games for free
description:
    free-game defines a monad that integrates features to create 2D games.
    .
    Twitter: #hs_free_game

homepage:            https://github.com/fumieval/free-game
bug-reports:         https://github.com/fumieval/free-game/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2012-2013 Fumiaki Kinoshita
category:            Graphics, Monads
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

extra-source-files:
  CHANGELOG.md
  examples/*.hs
  examples/*.png
  examples/*.ttf

source-repository head
  type: git
  location: https://github.com/fumieval/free-game.git

library
  default-language:   Haskell2010

  exposed-modules:
    FreeGame
    FreeGame.Class
    FreeGame.Data.Bitmap
    FreeGame.Data.Font
    FreeGame.Text
    FreeGame.UI
    FreeGame.Instances
    FreeGame.Backend.GLFW
    FreeGame.Internal.Finalizer
    FreeGame.Internal.GLFW
    FreeGame.Types
    FreeGame.Util

  ghc-options: -Wall -fexcess-precision -O2
  default-extensions: FlexibleContexts, FlexibleInstances, CPP
  build-depends:
    array >= 0.4,
    base == 4.*,
    colors == 0.3.*,
    containers >= 0.4,
    control-bool,
    directory >= 1.0,
    filepath >= 1.3,
    free >= 4.6.1 && < 5,
    freetype2 >= 0.1,
    GLFW-b >= 1.3 && <2,
    hashable >= 1.2,
    JuicyPixels,
    JuicyPixels-util >=0.1.1 && < 0.3,
    linear >= 1.0 && < 2,
    mtl >= 2.2 && <4,
    OpenGL >= 3 && <4,
    OpenGLRaw,
    random == 1.*,
    reflection,
    StateVar,
    template-haskell,
    transformers >= 0.3,
    vector >= 0.9 && <0.12,
    void >= 0.5,
    boundingboxes >= 0.2 && < 0.4,
    lens >= 3.8 && < 5
